css/index.css
/* ... */
#features .features-row {
  display: grid;
  gap: 1rem;
}
#features .feature-extra {
  position: absolute;
  transition: all 0.2s ease-in-out;
}
#features .features-row .card-6 {
  grid-column: 1/-1;
  display: flex;
  flex-direction: column;
  margin: 5rem 0;
}
#features .feature-text {
  display: grid;
  gap: 1rem;
  align-content: flex-start;
}
.card-1 .feature-extra {
  bottom: 10%;
  right: -0;
  left: 0;
  scale: 120%;
}
.card-2 .feature-extra {
  bottom: 0;
  left: -40%;
  right: 0;
  scale: 120%;
}
.card-3 .feature-extra {
  bottom: 50px;
  left: 20%;
  scale: 150%;
}
.card-5 .feature-extra {
  bottom: 10%;
  right: 20%;
  scale: 120%;
}
.features-wrapper {
  background-color: white;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  padding: 1rem;
  flex: 1;
}
.features-wrapper img {
  max-height: 45vh;
  margin: auto;
}

.features-wrapper-vertical {
  background-color: white;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  padding: 1rem;
  flex: 1;
}
.features-wrapper-vertical img {
  max-height: 45vh;
  margin: auto;
}
.feature-admin {
  color: white;
}

.feature-card-wrapper {
  display: grid;
  position: relative;
  align-content: end;
}
#video {
  padding: 0;
}
#team > h2 {
  margin: calc(2rem + 58px) auto 2rem auto;
  text-align: center;
}

#teamGrid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  max-width: 1200px;
  padding: 0;
  gap: 3rem;
  row-gap: 0;
}

.proposal-button:hover,
.proposal-button:focus,
.submit-button:hover {
  box-shadow: 0px 3px 12px 0px rgba(0, 255, 255, 0.5),
    0px 3px 6px 0px rgba(0, 255, 255, 0.5);
}

#teamGrid .gridItem {
  display: grid;
  gap: 0.5rem;
  max-width: 200px;
}
.member .memberName,
.memberRole,
.memberSocial {
  display: block;
}
.memberRole {
  height: auto;
  font-weight: 400;
  text-wrap: nowrap;
  font-size: 0.9rem;
}
.memberSocial {
  font-size: 1.5rem;
  display: flex;
  position: relative;
  gap: 1rem;
}
.memberName {
  margin: 0.5rem 0;
  font-weight: 700;
}

/*Footer*/
footer {
  padding: 3rem 1rem;
  display: grid;
  text-align: center;
  justify-content: center;
  gap: 1rem;
  background-color: rgba(30, 58, 138, 0.1);
}

/*Contact*/

#contact {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 23px;
  background-color: rgba(30, 58, 138, 0.1);
}

.contact-form {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-top: 1rem;
}
.form-wrapper,
.repo-wrapper {
  align-self: stretch;
  min-width: 400px;
  max-width: 600px;
  flex: 1;
  margin: 0 auto;
  padding-top: 2rem;
}
.contact-form :is(input, textarea) {
  display: flex;
  padding: 12px;
  border-radius: 5px;
  border: 1px solid lightgray;
}
.contact-form :is(input, textarea):focus {
  outline-color: #1e3a8a;
}

.contact-form div {
  display: grid;
}

.submit-button {
  display: flex;
  padding: 18px 32px;
  width: fit-content;
  justify-self: center;
  justify-content: center;
  align-items: center;
  gap: 12px;
  border-radius: 60px;
  border: transparent;
  background: var(--Color-palette-ocean-blue);
  box-shadow: 0px 3.6px 14.4px 0px rgba(30, 58, 138, 0.15),
    0px 3.6px 7.2px 0px rgba(30, 58, 138, 0.15);
  color: #fff;
  text-align: center;
  font-size: 18px;
  font-weight: 600;
}
button:hover {
  cursor: pointer;
}
.repo-wrapper ul {
  display: grid;
  padding: 0;
  gap: 2rem;
  margin-top: 3rem;
}
.repo-wrapper ul li {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  list-style: none;
}
.repo-wrapper ul li i {
  font-size: 2rem;
}
.repo-wrapper ul li a {
  font-size: 1.2rem;
}
/*Media Queries*/
@media screen and (max-width: 400px) {
  #hero {
    background-image: none;
    height: 60vh;
    justify-content: end;
  }
  #hero .hero-title {
    font-size: 2.5rem;
  }
  #hero .hero-text {
    font-size: 0.8rem;
  }
  .proposal-button {
    margin-top: 1rem;
    font-size: 0.8rem;
    padding: 0.87rem 1rem;
    font-weight: 600;
  }
  #solution {
    height: 62vh;
    padding: 0;
  }
  #solution .solution-image {
    bottom: -10px;
  }
  #team > h2 {
    margin: auto;
    font-size: 1.2rem;
  }
  .card-2 .feature-extra {
    left: -65%;
  }
  .card-5 .feature-extra {
    right: 5%;
  }
}
@media screen and (max-width: 599px) {
  header nav #menu {
    max-height: 50vh;
    width: 100%;
    right: 0;
    bottom: 0;
    top: calc(54px - 100%);
    position: fixed;
    margin: 0;
    display: flex;
    flex-direction: column;
    background-color: #ffff;
    padding: 10px 24px;
    gap: 12px;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
  }

  header nav #menu li a {
    display: block;
    width: 100%;
    padding: 0.5rem 1rem;
  }

  header nav #menu.show {
    display: flex;
    top: 0;
    padding-top: calc(54px + 1rem);
    z-index: 50;
  }
}

@media screen and (min-width: 600px) {
  header nav #menu {
    display: flex;
  }
  header {
    margin: 1.5rem auto;
    padding: 0 1.5rem;
  }

  header nav #toggleButton {
    display: none;
  }
  .hero-content {
    max-width: 50vw;
  }
  .hero-content .hero-text {
    max-width: 450px;
  }
  .features-wrapper {
    flex-direction: row;
  }
  .features-wrapper img {
    max-height: unset;
  }
  .card-1 .feature-extra {
    bottom: 10%;
    right: -5px;
    scale: 110%;
  }
  .card-2 .feature-extra {
    bottom: 0;
    left: -20%;
    right: unset;
    scale: 120%;
  }
  .card-2 :is(.feature-text, .feature-card-wrapper) {
    flex: 1;
  }
  .card-2 .feature-text {
    flex-grow: 3;
  }
  .card-3 .feature-extra {
    bottom: 50px;
    left: 20%;
    scale: 150%;
  }
  .card-5 .feature-extra {
    bottom: 10%;
    right: 35%;
    scale: 150%;
  }
  #awardsGrid {
    gap: 1rem;
    display: grid;
    justify-content: center;
    align-items: center;
    align-content: center;
    grid-template-columns: 1fr 1fr;
  }
  #awardsGrid img {
    max-width: 550px;
  }
}
/* ... */

